# vw-cpp-tdd-juli-2021

./: README.md
BigArrayProjekt/: BigArrayProjekt.sln
BigArrayProjekt/BigArrayProjekt/: ArrayService.cpp  ArrayService.h  BigArrayProjekt.cpp  BigArrayProjekt.vcxproj  BigArrayProjekt.vcxproj.filters
PersonenSericeProjectNeu/: PersonenSericeProjectNeu.sln
PersonenSericeProjectNeu/Debug/: PersonenSericeProjectNeu.idb  PersonenSericeProjectNeuTest.exe.gta.testdurations  PersonenSericeProjectNeuTest.ilk
PersonenSericeProjectNeu/PersonenSericeProjectNeu/: PersonenSericeProjectNeu.vcxproj  PersonenSericeProjectNeu.vcxproj.filters  person.h  personen_repository.h  personen_service.h  personen_service_exception.cpp  personen_service_impl.h  repository_exception.h
PersonenSericeProjectNeu/PersonenSericeProjectNeuTest/: PersonenSericeProjectNeuTest.vcxproj  packages.config  personen_repository_mock.h  personen_service_impl_test.cpp  personen_service_impl_test.h
Skizze/: Skizze.sln
Skizze/Debug/: Skizze.ilk
Skizze/Skizze/: Skizze.vcxproj  stapel.h  stapel_test.cpp  stapel_test.h
Tag1_01stapel/: Tag1_01stapel.sln
Tag1_01stapel/Debug/: Tag1_01stapelTest.exe.gta.testdurations  Tag1_01stapelTest.ilk
Tag1_02Tiere/: Tag1_02Tiere.sln
Tag2_01PersonenServiceProjekt/: Tag2_01PersonenServiceProjekt.sln
Tag2_1PersonenServiceKorrigiert/: Tag2_1PersonenServiceKorrigiert.sln
Tag3_01Logger/: Tag3_01Logger.sln
Tag3_02Nummspiel/: Tag3_02Nummspiel.sln
delete_this_project/: delete_this_project.sln
fill-array-exercise/: CMakeLists.txt
fill-array-exercise/example/: random_vector.cpp
fill-array-exercise/include/example/container/: parallel_vector_creator.hpp  vector_creator_interface.hpp
fill-array-exercise/include/example/math/: closed_interval.hpp  number_generator_factory_interface.hpp  number_generator_interface.hpp
fill-array-exercise/include/example/random/: mersenne_twister_number_generator.hpp  mersenne_twister_number_generator_factory.hpp
fill-array-exercise/include/example/time/: stop_watch.hpp  stop_watch_interface.hpp
(+178 files in other folders)
